# specwright

./: .gitignore  .ralph-prompt.HQIO5s.md  .ralph-prompt.jXP2KH.md  .ralph-prompt.ug2sVq.md  AGENTS.md  README.md  TODO.md  analysis.md  architecture.md  decisions.md  diagnosis.md  next-session-prompt.md  prd.json  progress.txt  pyproject.toml  ralph.sh  todo-reference-design.json  todo-reference.json  validate_output.sh
.codex/: config.toml
.devcontainer/: Dockerfile
contracts/: semantic_spec.json
initializer/: cli.py  test_prd_scoring.py
initializer/ai/: client.py  discovery_engine.py  discovery_merge.py  prd_review.py  prd_scorer.py  refine_engine.py
initializer/capabilities/: cms.py  i18n.py  public_site.py  scheduled_jobs.py
initializer/engine/: archetype_engine.py  architecture_engine.py  architeture_diagram_engine.py  capability_derivation.py  capability_engine.py  challenges_engine.py  commands_engine.py  constraint_engine.py  design_reference_engine.py  design_system_engine.py  domain_model_engine.py  knowledge_engine.py  prd_intelligence_engine.py  risk_engine.py  story_engine.py  validation_contract.py
initializer/flow/: archetype_detection.py  architect_flow.py  benchmark_project.py  challenges_flow.py  design_flow.py  design_style_flow.py  doctor_project.py  enrich_project.py  new_project.py  plan_project.py  prepare_project.py  refine_project.py  (+2 more)
openclaw_project_initializer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
playbooks/: editorial-cms.yaml
schemas/: semantic-spec.schema.json
tmp-progress-test/: progress.txt
(+559 files in other folders)
